# edit4config

./: LICENSE  README.md  pyproject.toml
src/edit4config/: __init__.py  edit4config.py
